      (LP: #724687).
    - Open temporary synaptic selections file in text mode.
  * Define __bool__ rather than __nonzero__ method in Python 3.
  * sort(cmp=) and sorted(cmp=) no longer work in Python 3.  Use appropriate
    key= arguments instead.
  * Fix ResourceWarning while reading /proc/mounts.
  * Make update-manager-kde depend on psmisc, for killall.

  [ Adam Conrad ]
  * Merge branch from Michael Terry to drop auto-upgrade-tester
    from update-manager and move it into its own source package

  [ Barry Warsaw ]
  * Begin refactoring of Computer Janitor code by renaming and
    re-situating all of it to janitor/plugincore.  This will eventually be
    removed from here into its own separate branch.
  * Merge the temporary Python 3 sprint branch back into trunk, and close
    the py3 sprint branch.
  
  [ Michael Vogt ]
  * UpdateManager/GtkProgress.py:
    - fix python-apt 0.8 API crash

  [ Stéphane Graber ]
  * Drop fdsend as it's not used and doesn't build with python3.
  * Make update-manager-core a binary all packages (everything is python).
  * Split update-manager-core into python-update-manager,
    python3-update-manager and update-manager-core.
  * Build-depend and depend on python-apt >= 0.8.5~ as we need proper
    python3 support.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100

update-manager (1:0.162) quantal; urgency=low

  * DistUpgrade/build-tarball.sh:
    - include "DistUpgrade" symlink in tarball to ensure relative
      imports keep working

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Jun 2012 14:27:50 +0200

update-manager (1:0.161) quantal; urgency=low

  * /usr/share/nvidia-common/obsolete was renamed to
    /usr/share/ubuntu-drivers-common/obsolete and moved packages.  Cope with
    this.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 01 Jun 2012 20:53:46 +0100

update-manager (1:0.160) quantal; urgency=low

  [ Colin Watson ]
  * Use Python 3-style print functions.