@@ -53,6 +53,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     key= arguments instead.
   * Fix ResourceWarning while reading /proc/mounts.
   * Make update-manager-kde depend on psmisc, for killall.
+  * DistUpgrade/DistUpgradeView.py:
+    - Use floor division in FuzzyTimeToStr.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
